--- a/skin/sass/layout/_post-listing.scss
+++ b/skin/sass/layout/_post-listing.scss
@@ -8,6 +8,7 @@
     }
 
     .listing-post {
+        overflow: hidden;
         margin: 1.2em 0;
         padding: 0.5em 1em;
     }
