--- a/skin/sass/layout/_post.scss
+++ b/skin/sass/layout/_post.scss
@@ -13,6 +13,25 @@
 .post-upvote {
     margin: 0 1em 0 0;
     text-align: center;
+    float: left;
+    &.without-upvote-button {
+        padding-top: 0.5em;
+    }
+}
+
+.post-info {
+    float: left;
+    padding-top: 0.5em;
+}
+
+.user-info {
+    float: right;
+    .fa {
+        vertical-align: middle;
+        padding-right: 0.25em;
+        color: rgb(192, 190, 190);
+        font-size: 1.1em;
+    }
 }
 
 .availability {
@@ -32,20 +51,6 @@
     }
 }
 
-.post-info {
-    width: calc(100% - 21.5em);
-}
-
-.user-info {
-    width: 18em;
-    text-align: right;
-    .fa {
-        padding-right: 0.25em;
-        color: rgb(192, 190, 190);
-        font-size: 1.1em;
-    }
-}
-
 .fa {
     display: block;
     text-align: center;
@@ -53,6 +58,8 @@
 
 .post-upvote-wrapper {
     display: block;
+    margin-top: -9px;
+    margin-bottom: -2px;
 }
 
 .post-vote-count-wrapper {
